# Task-schedular

./: .gitignore  CMakeLists.txt  README.md
include/: ipcConfig.hpp  operation.hpp  scheduler.hpp  task.hpp  taskMessage.hpp
src/: client.cpp  main.cpp  schedular.cpp  scheduler.cpp  task.cpp
